clean style.css, fix screen overflow

--- a/client/style.css
+++ b/client/style.css
@@ -1,171 +1,198 @@
-header, footer, main, #logo, #searchBar, #info, #otherInfo, #break, #carbon, #country{
-    /* border: 2px solid gray; */
-    /* margin: 2px; */
-    box-sizing: border-box;
-    /* justify-content: center; */
+/* global stying */
+
+* {
+	box-sizing: border-box;
 }
-
-*{box-sizing: border-box;}
-   
-header{grid-area: head;}
-footer{grid-area: foot;}
-main{grid-area: main;}
-#logo{grid-area: logo;}
-#searchBar{grid-area: sb;}
-#info{grid-area: info;}
-#otherInfo{grid-area: otherInfo;}
-#break{grid-area: break;}
-#country{grid-area: country;}
-#carbon{grid-area: carbon;}
-
-#googleLogo{
-    display: block;
-    margin-left: auto;
-    margin-right: auto;  
-    /* margin-top:200px;
-    margin-bottom:20px; */
-
-}
-
-
-body{
-    display:grid;
-    height:100vh;
-    width:100vw;
-    grid-template-columns: 1fr;
-    grid-template-rows: 8% 1fr 15% ;
-    grid-template-areas: "head"
-                        "main"
-                        "foot";
-}
-
-main{
-    display: grid;
-    height:100%;
-    width:100vw;
-    grid-template-columns: 1fr;
-    grid-template-rows: 40% 30% 1fr;
-    grid-template-areas: "logo"
-                        "sb"
-                        "break";
-                    
-}
-
-
-footer{
-    display: grid;
-    height:100%;
-    width:100vw;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr 1fr 1r;
-    grid-template-areas: "country country"
-                        "carbon carbon"
-                        "info otherInfo";
-    text-align: center;
-    background-color: rgb(233, 233, 233);
-    color: grey;
-
-}
-
-
 
 ul {
-    list-style-type: none;
-    overflow: hidden;
-  }
-
-header li {
-    float: right;
-  }
-
-footer ul { background-color: rgb(233, 233, 233)}
-
-footer li {
-    display: inline;
-
+	list-style-type: none;
+	overflow: hidden;
 }
 
+/* main grid layout names */
 
-  li a {
-    color: #000;
-    display: block;
-    text-align: center;
-    padding: 10px 10px;
-    text-decoration: none;
-    font-size:14px;
-  }
-  li a:hover {
-    text-decoration: underline;
-  }
-  .grid{
-    height:23px;
-    position:relative;
-    bottom:4px;
-  }
-  .signbutton{
-    background-color: #4885ed;
-    color: #fff;
-    border:none;
-    border-radius:3px;
-    padding:7px 10px;
-    position:relative;
-    bottom:7px;
-    font-weight:bold;
-  }
+header {
+	grid-area: head;
+}
+main {
+	grid-area: main;
+}
+#logo {
+	grid-area: logo;
+}
+#searchBar {
+	grid-area: sb;
+}
+#info {
+	grid-area: info;
+}
+#otherInfo {
+	grid-area: otherInfo;
+}
+#break {
+	grid-area: break;
+}
+#country {
+	grid-area: country;
+}
+#carbon {
+	grid-area: carbon;
+}
 
+/* main styling */
 
-  .bar{
-    margin:0 auto;
-    width:575px;
-    border-radius:30px;
-    border:1px solid #dcdcdc;
-  }
-  .bar:hover{
-    box-shadow: 1px 1px 8px 1px #dcdcdc;
-  }
-  .bar:focus-within{
-    box-shadow: 1px 1px 8px 1px #dcdcdc;
-    outline:none;
-  }
-  .searchbar{
-    height:45px;
-    border:none;
-    width:500px;
-    font-size:16px;
-    outline: none;
-    
-  }
-  .voice{
-    height:20px;
-    position:relative;
-    top:5px;
-    left:10px;
-  }
+body {
+	display: grid;
+	min-height: 100vh;
+	margin: 0;
+	grid-template-columns: 1fr;
+	grid-template-rows: 8% 1fr 15%;
+	grid-template-areas:
+		'head'
+		'main'
+		'foot';
+}
 
+#googleLogo {
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+}
 
-  .buttons{
-    margin-top:30px;   text-align: center;
-    
-  }
-  .button{
-    background-color: #f5f5f5;
-    border:none;
-    color:#707070;
-    font-size:15px;
-    padding: 10px 20px;
-    margin:5px;
-    border-radius:4px;
-    outline:none;
-    text-align: center;
- 
-  }
-  .button:hover{
-    border: 1px solid #c8c8c8;
-    padding: 9px 19px;
-    color:#808080;
-  }
-  .button:focus{
-    border:1px solid #4885ed;
-    padding: 9px 19px;
-  }
-  
+header li {
+	float: right;
+}
+
+main {
+	display: grid;
+	height: 100%;
+	grid-template-columns: 1fr;
+	grid-template-rows: 40% 30% 1fr;
+	grid-template-areas:
+		'logo'
+		'sb'
+		'break';
+}
+
+form {
+	display: inline;
+}
+
+footer {
+	grid-area: foot;
+	display: grid;
+	grid-template-columns: 1fr 1fr;
+	grid-template-rows: 1fr 1fr 1fr;
+	grid-template-areas:
+		'country country'
+		'carbon carbon'
+		'info otherInfo';
+	height: 100%;
+	background-color: rgb(233, 233, 233);
+	color: grey;
+	text-align: center;
+}
+
+footer ul {
+	background-color: rgb(233, 233, 233);
+	margin: 0 auto;
+}
+
+footer li {
+	display: inline;
+}
+
+#info,
+#otherInfo {
+	display: flex;
+	align-items: center;
+}
+
+li a {
+	color: #000;
+	display: block;
+	text-align: center;
+	padding: 10px 10px;
+	text-decoration: none;
+	font-size: 14px;
+}
+
+li a:hover {
+	text-decoration: underline;
+}
+
+.grid {
+	height: 23px;
+	position: relative;
+	bottom: 4px;
+}
+
+.signbutton {
+	background-color: #4885ed;
+	color: #fff;
+	border: none;
+	border-radius: 3px;
+	padding: 7px 10px;
+	position: relative;
+	bottom: 7px;
+	font-weight: bold;
+}
+
+.bar {
+	margin: 0 auto;
+	width: 575px;
+	border-radius: 30px;
+	border: 1px solid #dcdcdc;
+}
+
+.bar:hover {
+	box-shadow: 1px 1px 8px 1px #dcdcdc;
+}
+
+.bar:focus-within {
+	box-shadow: 1px 1px 8px 1px #dcdcdc;
+	outline: none;
+}
+
+.searchbar {
+	height: 45px;
+	border: none;
+	width: 500px;
+	font-size: 16px;
+	outline: none;
+}
+
+.voice {
+	height: 20px;
+	position: relative;
+	top: 5px;
+	left: 10px;
+}
+
+.buttons {
+	margin-top: 30px;
+	text-align: center;
+}
+
+.button {
+	background-color: #f5f5f5;
+	border: none;
+	color: #707070;
+	font-size: 15px;
+	padding: 10px 20px;
+	margin: 5px;
+	border-radius: 4px;
+	outline: none;
+	text-align: center;
+}
+
+.button:hover {
+	border: 1px solid #c8c8c8;
+	padding: 9px 19px;
+	color: #808080;
+}
+
+.button:focus {
+	border: 1px solid #4885ed;
+	padding: 9px 19px;
+}
